--- a/shop/products/templates/products/products_list.html
+++ b/shop/products/templates/products/products_list.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'products/base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<h1>Welcome to the products list page!!!</h1>
+<hr>
+{% if product_list %}
+    <ul>
+
+      {% for product in product_list %}
+      <li>
+        <a href="{% url 'products' product.id %}">{{ product.title }}</a>
+      </li>
+      {% endfor %}
+
+    </ul>
+{% else %}
+  <p>There are no products in the shop.</p>
+{% endif %}
+<h3><a href="{% url 'main_page' %}">To main page</a></h3>
+{% endblock %}
