--- a/shop/products/templates/products/product.html
+++ b/shop/products/templates/products/product.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'products/base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<h1 class="text-center">Heloo! You are in {{ product.title }} page!!!</h1>
+<hr>
+<img src="{{ product.image.url }}" class="card-img" alt="..." style="width: 50%">
+<p>{{ product.description }}</p>
+<br>
+<h3><a href="{% url 'products_list' %}">To products</a></h3>
+{% endblock %}
