--- a/shop/products/templates/products/products_list.html
+++ b/shop/products/templates/products/products_list.html
@@ -2,18 +2,26 @@
 {% load static %}
 
 {% block content %}
-<h1>Welcome to the products list page!!!</h1>
+<h1 class="text-center">Welcome to the products list page!!!</h1>
 <hr>
 {% if product_list %}
-    <ul>
-
-      {% for product in product_list %}
-      <li>
-        <a href="{% url 'products' product.id %}">{{ product.title }}</a>
-      </li>
-      {% endfor %}
-
-    </ul>
+    {% for product in product_list %}
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="{{ product.image.url }}" class="card-img" alt="..." style="width: 100%; height: 25rem">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <a href="{% url 'product' product.id %}"><h3 class="card-title">{{ product.title }}</h3></a>
+              <hr>
+              <p class="card-text"><small>{{ product.description }}</small></p>
+              <h4 class="card-text">{{ product.price }} $</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
 {% else %}
   <p>There are no products in the shop.</p>
 {% endif %}
